objects/Course__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links Courses to the School</description>
        <label>School</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Level_Characteristic__c</fullName>
        <description>An indication of the general nature and difficulty of instruction provided throughout a course.</description>
        <inlineHelpText>An indication of the general nature and difficulty of instruction provided throughout a course.</inlineHelpText>
        <label>Course Level Characteristic</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Remedial Course</fullName>
                </value>
                <value>
                    <fullName>Students with Disabilities Course</fullName>
                </value>
                <value>
                    <fullName>Basic Course</fullName>
                </value>
                <value>
                    <fullName>General Course</fullName>
                </value>
                <value>
                    <fullName>Honors Level Course</fullName>
                </value>
                <value>
                    <fullName>Gifted and Talented Course</fullName>
                </value>
                <value>
                    <fullName>International Baccalaureate Course</fullName>
                </value>
                <value>
                    <fullName>Advanced Placement Course</fullName>
                </value>
                <value>
                    <fullName>College-Level Course</fullName>
                </value>
                <value>
                    <fullName>Untracked Course</fullName>
                </value>
                <value>
                    <fullName>English Language Learner (ELL) Course</fullName>
                </value>
                <value>
                    <fullName>Accepted as a High School Equivalent</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Notes__c</fullName>
        <inlineHelpText>Enter a description of the course. You can use this field for reporting purposes.</inlineHelpText>
        <label>Course Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Course_Number__c</fullName>
        <inlineHelpText>Enter the unique course number. SchoolForce uses this value to identify the course.</inlineHelpText>
        <label>Course Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Weighting_Records__c</fullName>
        <label>Course Weighting Records</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Hours__c</fullName>
        <inlineHelpText>Enter the number of credit hours students earn upon completion of this course. SchoolForce uses the credit hours to calculate weighted and unweighted GPAs.</inlineHelpText>
        <label>Credit Hours</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Type_Earned__c</fullName>
        <description>The type of credits or units of value awarded for the completion of a course.</description>
        <inlineHelpText>The type of credits or units of value awarded for the completion of a course.</inlineHelpText>
        <label>Credit Type Earned</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Carnegie Unit</fullName>
                </value>
                <value>
                    <fullName>Semester Hour Credit</fullName>
                </value>
                <value>
                    <fullName>Trimester Hour Credit</fullName>
                </value>
                <value>
                    <fullName>Quarter Hour Credit</fullName>
                </value>
                <value>
                    <fullName>Quinmester Hour Credit</fullName>
                </value>
                <value>
                    <fullName>Mini-Term Hour Credit</fullName>
                </value>
                <value>
                    <fullName>Summer Term Hour Credit</fullName>
                </value>
                <value>
                    <fullName>Intersession Hour Credit</fullName>
                </value>
                <value>
                    <fullName>Long Session Hour Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credits__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Number of Credits for this course, for final grade calculation</inlineHelpText>
        <label>Credits</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Curriculum_Framework__c</fullName>
        <description>An indication of the standard curriculum used for this course.</description>
        <inlineHelpText>An indication of the standard curriculum used for this course.</inlineHelpText>
        <label>Curriculum Framework</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>State Curriculum Framework</fullName>
                </value>
                <value>
                    <fullName>LEA Curriculum Framework</fullName>
                </value>
                <value>
                    <fullName>School Curriculum Framework</fullName>
                </value>
                <value>
                    <fullName>Private, Religious Curriculum</fullName>
                </value>
                <value>
                    <fullName>National Curriculum Standard</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Daily_Attendance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Daily Attendance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Maximum_Enrollment__c</fullName>
        <label>Default Maximum Enrollment</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <inlineHelpText>Select the department that teaches the course. You can use this field for reporting purposes.</inlineHelpText>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Mathematics</fullName>
                </value>
                <value>
                    <fullName>Social Studies</fullName>
                </value>
                <value>
                    <fullName>Science</fullName>
                </value>
                <value>
                    <fullName>Extracurricular</fullName>
                </value>
                <value>
                    <fullName>Art</fullName>
                </value>
                <value>
                    <fullName>Music</fullName>
                </value>
                <value>
                    <fullName>Language</fullName>
                </value>
                <value>
                    <fullName>Physical Education</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>What topics are covered in this course? How would you describe the coursework you&apos;re going to cover?</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Display_Numerical_Values_On_Report_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls the rendering of the report card to either use the letter grades or use the actual numerical values between 0-100 for display</description>
        <inlineHelpText>Select if you want the numerical value for a grade to display on report cards (e.g., 98 instead of A+).</inlineHelpText>
        <label>Display Numerical Values On Report Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <defaultValue>9999</defaultValue>
        <inlineHelpText>On Homework Tracker, Course will be displayed according to the order in this field (1 = Furthest Left). Any records with the default of 9999 will be displayed in A-Z order after the ordered records</inlineHelpText>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Display_on_Student_Staff_Schedule__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field allows users to select which courses show up on staff/student schedules.</description>
        <inlineHelpText>If this check box is selected, this course displays on student and staff schedules. By default, this check box is selected.</inlineHelpText>
        <label>Display on Student/Staff Schedule?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Class_Rank__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from Class Rank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_from_GPA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from GPA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Honor_Roll__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from Honor Roll</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_on_RC_Transcripts__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if you want this course excluded from displaying on report cards and transcripts.</inlineHelpText>
        <label>Exclude on RC/Transcripts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPA_Added_Value_Points__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>If this course uses value-added points for weighted GPA grading, enter the number of points you want SchoolForce to add or multiply to calculate the weighted GPA.</inlineHelpText>
        <label>GPA Added Value Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grade_Scale_Category__c</fullName>
        <formula>TEXT(Grade_Scale_Lookup__r.Category__c)</formula>
        <label>Grade Scale Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade_Scale_Id__c</fullName>
        <formula>CASESAFEID(Grade_Scale_Lookup__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grade Scale Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade_Scale_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Not active until the Hawaii release.</description>
        <inlineHelpText>Select the grade scale this course will use to calculate grades.</inlineHelpText>
        <label>Grade Scale</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Grade Scale field must be of Record Type Grade Scale</errorMessage>
            <filterItems>
                <field>Picklist_Value__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Grade Scale</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Picklist_Value__c</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grade_Scale_Name__c</fullName>
        <formula>Grade_Scale_Lookup__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grade Scale Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade_Scale_RT__c</fullName>
        <formula>Grade_Scale_Lookup__r.RecordType.DeveloperName</formula>
        <label>Grade Scale RT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade_Scale__c</fullName>
        <inlineHelpText>SchoolForce no longer uses this field. Do not select a value.</inlineHelpText>
        <label>Legacy Grade Scale *Do Not Use*</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit/No Credit</fullName>
                </value>
                <value>
                    <fullName>Points</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
                <value>
                    <fullName>ELH 1-2-3-4 Rubric</fullName>
                </value>
                <value>
                    <fullName>4ELH 1-2-3-4 Rubric TENTHS</fullName>
                </value>
                <value>
                    <fullName>ELH Traditional</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Standards</fullName>
                </value>
                <value>
                    <fullName>0-100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grading_reporting_period_length__c</fullName>
        <label>Grading/reporting period length</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Final_Grade__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if the course has a final exam grade for each reporting period. If selected, SchoolForce automatically adds a default weighting for the final reporting periods on the Configure Course Reporting Period Weightings screen when you save the course.</inlineHelpText>
        <label>Has Final Grade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_a_lab__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if the course has a corresponding lab (e.g., a science of language class). You can use this field for reporting purposes.</inlineHelpText>
        <label>Has a lab?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Homework_Based__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if you want the sections created from this course to display in the Homework module.</inlineHelpText>
        <label>Homework Based</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Honors_Course__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Students successfully completing this course will receive honor&apos;s credit.</description>
        <inlineHelpText>Students successfully completing this course will receive honor&apos;s credit.</inlineHelpText>
        <label>Honors Course</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_in_section_snapshot__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Select if you want SchoolForce to include the information for this course in the Section snapshots that are created in the End of Year Wizard</inlineHelpText>
        <label>Include in section snapshot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_of_enrollment__c</fullName>
        <description>Maximum number of enrollment</description>
        <inlineHelpText>Enter the maximum number of students that can be enrolled in this course. You can use this field for reporting purposes.</inlineHelpText>
        <label>Max # of enrollment</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meets_every_day__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if this course meets every day. You can use this field for reporting purposes.</inlineHelpText>
        <label>Meets every day?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Min_of_enrollment__c</fullName>
        <description>Minimum # of enrollment</description>
        <inlineHelpText>Enter the minimum number of students that should be enrolled in this course. You can use this field for reporting purposes.</inlineHelpText>
        <label>Min # of enrollment</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multiply_GPA_Added_Value_Points__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users can choose to multiply instead of adding to the GPA weight.</description>
        <inlineHelpText>Select if this is a course that uses value-added points for weighted GPA grading and you want SchoolForce to multiply the value added points to calculate the weighted GPA. If you do not select this check box, SchoolForce adds the value added points.</inlineHelpText>
        <label>Multiply GPA Added Value Points</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_Spanish__c</fullName>
        <description>The Course Name in Spanish language.</description>
        <inlineHelpText>Enter the Spanish translation of the course name. This value will display on translated report cards, progress reports, transcripts, and the Student/Parent Portal.</inlineHelpText>
        <label>Name in Spanish</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Reporting_Periods__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Select the default number of reporting periods over which the sections in this course will meet. If the number of reporting periods for this course is variable, you can define additional reporting period durations by clicking Edit Grade Weightings.</inlineHelpText>
        <label>Number of Reporting Periods</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_requisites__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Search for and select the course that is required before a student can enroll in this course. You can use this field for reporting purposes.</inlineHelpText>
        <label>Pre-requisites</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Id__c</fullName>
        <description>School-Course Name Unique Key</description>
        <externalId>true</externalId>
        <label>Reference Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Course_Name__c</fullName>
        <label>Reporting Course Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_for_graduation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select If students are required to take this course in order to graduate. You can use this field for reporting purposes as well as for cohort requirements.</inlineHelpText>
        <label>Required for graduation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Room_Type__c</fullName>
        <inlineHelpText>Select the type of room in which this course should be scheduled. You can use this field for reporting purposes.</inlineHelpText>
        <label>Room Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Art Room</fullName>
                    <default>true</default>
                    <label>Art Room</label>
                </value>
                <value>
                    <fullName>Auditorium</fullName>
                </value>
                <value>
                    <fullName>Band/Orchestra Room</fullName>
                </value>
                <value>
                    <fullName>Classroom</fullName>
                </value>
                <value>
                    <fullName>Clinic</fullName>
                </value>
                <value>
                    <fullName>Computer Lab</fullName>
                </value>
                <value>
                    <fullName>Gymnasium</fullName>
                </value>
                <value>
                    <fullName>Home Economics Classroom</fullName>
                </value>
                <value>
                    <fullName>Library</fullName>
                </value>
                <value>
                    <fullName>Lunchroom</fullName>
                </value>
                <value>
                    <fullName>Music Room</fullName>
                </value>
                <value>
                    <fullName>Nurse&apos;s Office</fullName>
                </value>
                <value>
                    <fullName>Playground</fullName>
                </value>
                <value>
                    <fullName>Science Lab</fullName>
                </value>
                <value>
                    <fullName>Teacher&apos;s Lounge</fullName>
                </value>
                <value>
                    <fullName>Workshop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Course_Identifier__c</fullName>
        <description>The five-digit SCED code and name of the course. The first two-digits of the code represent the Secondary Course Subject Area. These identifiers are fairly general but provide enough specificity to identify the course&apos;s topic and to distinguish it from other courses in that subject area.</description>
        <inlineHelpText>The five-digit SCED code and name of the course. The first two-digits of the code represent the Secondary Course Subject Area.</inlineHelpText>
        <label>Secondary Course Identifier</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Course_Level__c</fullName>
        <description>An indication of the general nature and difficulty of instruction provided throughout a course.</description>
        <inlineHelpText>An indication of the general nature and difficulty of instruction provided throughout a course.</inlineHelpText>
        <label>Secondary Course Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>B - Basic or Remedial</fullName>
                </value>
                <value>
                    <fullName>G - General or Regular</fullName>
                </value>
                <value>
                    <fullName>E - Enriched or Advanced</fullName>
                </value>
                <value>
                    <fullName>H - Honors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Course_Subject_Area__c</fullName>
        <description>The intended major subject area of the secondary education course.</description>
        <inlineHelpText>The intended major subject area of the secondary education course.</inlineHelpText>
        <label>Secondary Course Subject Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01 - English Language and Literature</fullName>
                </value>
                <value>
                    <fullName>02 - Mathematics</fullName>
                </value>
                <value>
                    <fullName>03 - Life and Physical Sciences</fullName>
                </value>
                <value>
                    <fullName>04 - Social Sciences and History</fullName>
                </value>
                <value>
                    <fullName>05 - Fine and Performing Arts</fullName>
                </value>
                <value>
                    <fullName>06 - Foreign Language and Literature</fullName>
                </value>
                <value>
                    <fullName>07 - Religious Education and Theology</fullName>
                </value>
                <value>
                    <fullName>08 - Physical, Health, and Safety Education</fullName>
                </value>
                <value>
                    <fullName>09 - Military Science</fullName>
                </value>
                <value>
                    <fullName>10 - Computer and Information Sciences</fullName>
                </value>
                <value>
                    <fullName>11 - Communications and Audio/Visual Technology</fullName>
                </value>
                <value>
                    <fullName>12 - Business and Marketing</fullName>
                </value>
                <value>
                    <fullName>13 - Manufacturing</fullName>
                </value>
                <value>
                    <fullName>14 - Health Care Sciences</fullName>
                </value>
                <value>
                    <fullName>15 - Public, Protective, and Government Service</fullName>
                </value>
                <value>
                    <fullName>16 - Hospitality and Tourism</fullName>
                </value>
                <value>
                    <fullName>17 - Architecture and Construction</fullName>
                </value>
                <value>
                    <fullName>18 - Agriculture, Food, and Natural Resources</fullName>
                </value>
                <value>
                    <fullName>19 - Human Services</fullName>
                </value>
                <value>
                    <fullName>20 - Transportation, Distribution and Logistics</fullName>
                </value>
                <value>
                    <fullName>21 - Engineering and Technology</fullName>
                </value>
                <value>
                    <fullName>22 - Miscellaneous</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Subject__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special Subject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subject_Area_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the applicable subject area for this course. You can use the subject area for reporting purposes as well as for cohort requirements.</inlineHelpText>
        <label>Subject Area Lookup</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Courses (Subject Area Lookup)</relationshipLabel>
        <relationshipName>Course</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subject_Area__c</fullName>
        <label>Subject Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Citizenship</fullName>
                </value>
                <value>
                    <fullName>Cognitive Development</fullName>
                </value>
                <value>
                    <fullName>Computer Science Programming</fullName>
                </value>
                <value>
                    <fullName>Computer Skills/Literacy</fullName>
                </value>
                <value>
                    <fullName>Elective Activities</fullName>
                </value>
                <value>
                    <fullName>English as a Second Language</fullName>
                </value>
                <value>
                    <fullName>Fine Arts - Art</fullName>
                </value>
                <value>
                    <fullName>Fine Arts - Dance</fullName>
                </value>
                <value>
                    <fullName>Fine Arts - Drama/Theater</fullName>
                </value>
                <value>
                    <fullName>Fine Arts - Music</fullName>
                </value>
                <value>
                    <fullName>Fitness</fullName>
                </value>
                <value>
                    <fullName>Foreign Language and Literature</fullName>
                </value>
                <value>
                    <fullName>Geography</fullName>
                </value>
                <value>
                    <fullName>Handwriting/Penmanship</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>History</fullName>
                </value>
                <value>
                    <fullName>Home Economics</fullName>
                </value>
                <value>
                    <fullName>Homework</fullName>
                </value>
                <value>
                    <fullName>Industrial Arts</fullName>
                </value>
                <value>
                    <fullName>Keyboarding/typing</fullName>
                </value>
                <value>
                    <fullName>Language Arts</fullName>
                </value>
                <value>
                    <fullName>Library Skills</fullName>
                </value>
                <value>
                    <fullName>Listening &amp; Speaking</fullName>
                </value>
                <value>
                    <fullName>Literacy</fullName>
                </value>
                <value>
                    <fullName>Math</fullName>
                </value>
                <value>
                    <fullName>Mathematics/Arithmetic</fullName>
                </value>
                <value>
                    <fullName>Military Science</fullName>
                </value>
                <value>
                    <fullName>Multi/Interdisciplinary Studies</fullName>
                </value>
                <value>
                    <fullName>Physical Development</fullName>
                </value>
                <value>
                    <fullName>Physical Education</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transfer_School__c</fullName>
        <description>The name of the External school the course belongs too.</description>
        <label>Transfer School</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Select the type of course. For example, the type of course may include options such as honors, AP, international baccalaureate. You can use this field for reporting purposes as well as for cohort requirements.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>Honors</fullName>
                </value>
                <value>
                    <fullName>IB</fullName>
                </value>
                <value>
                    <fullName>Remedial</fullName>
                </value>
                <value>
                    <fullName>Credit/No Credit</fullName>
                </value>
                <value>
                    <fullName>Points</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_Assignment_Type_Percentages__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This determines if section grades are graded using % weighted assignment types. Ex: Test = 50% HW = 30% Classwork = 20%</description>
        <inlineHelpText>Select if you want SchoolForce to weigh the assignment types using a percentage. For example, you can designate Homework as worth 30% of a student&apos;s section grade.</inlineHelpText>
        <label>Use Assignment Type Percentages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weighting_Check__c</fullName>
        <label>Weighting % Check</label>
        <summarizedField>Course_Weightings__c.Weighting__c</summarizedField>
        <summaryForeignKey>Course_Weightings__c.Course__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>